--- a/Lab Notebook/Lab Notebook.ipynb
+++ b/Lab Notebook/Lab Notebook.ipynb
@@ -1466,6 +1466,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HTML()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 394,
    "metadata": {},
    "outputs": [],
